--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
          Third, I like that the lyrics are relatable, and Taylor does a great job of connecting with her fans.
           Keep reading to learn more about Taylor!
     </p> 
-<section>
+<section class="information">
     <h1>About Taylor Swift </h1>
     <p>
         Taylor is a country and pop artist who has been in the industry since 2006.
