--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </ul>
 </nav>
 <title>Spotlight on Taylor Swift </title>
-<img src="1737.jpg" width="640" height="360" alt="photo of Taylor Swift">
+
     <p> 
         My favorite singer is Taylor Swift! 
         Even though I love listening to a variety of artists, I chose Taylor for a few different reasons.
@@ -23,7 +23,7 @@
          Third, I like that the lyrics are relatable, and Taylor does a great job of connecting with her fans.
           Keep reading to learn more about Taylor!
     </p> 
-<section class="information">
+<section>
     <h1>About Taylor Swift </h1>
     <p>
         Taylor is a country and pop artist who has been in the industry since 2006.
@@ -35,7 +35,7 @@
     <footer> </footer>
 </section>
 <section>
-<h1>Discography</h1>
+<h2>Discography</h2>
 <p>
     Taylor has recorded nine 9 original albums. 
     A few of them are Fearless, Lover, 1989, and Folklore. Fearless, Lover, and 1989 are all pop. 
@@ -45,7 +45,7 @@
 </p>
 </section>
 <section>
-    <h1>Fun Facts</h1>
+    <h2>Fun Facts</h2>
     <p> 
         Here are a few additional facts about Taylor. 
         Her birthday is December 13! 
